@@ -29,6 +29,7 @@ export IREDAPD_TARBALL="iRedAPD-${IREDAPD_VERSION}.tar.bz2"
 export IREDAPD_PARENT_DIR='/opt'
 export IREDAPD_ROOT_DIR="${IREDAPD_PARENT_DIR}/iRedAPD-${IREDAPD_VERSION}"
 export IREDAPD_ROOT_DIR_SYMBOL_LINK="${IREDAPD_PARENT_DIR}/iredapd"
+export IREDAPD_CONF="${IREDAPD_ROOT_DIR_SYMBOL_LINK}/settings.py"
 
 # IREDAPD_BIND_HOST is configured in conf/global
 export IREDAPD_LISTEN_PORT='7777'
